--- a/src/Riganti.Bomberman/Riganti.Bomberman/package.json
+++ b/src/Riganti.Bomberman/Riganti.Bomberman/package.json
@@ -3,9 +3,11 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "@types/node": "^22.7.4",
+    "qrcode": "^1.5.4",
     "three": "^0.169.0"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.5",
     "@types/three": "^0.169.0",
     "esbuild": "^0.24.0",
     "typescript": "^5.6.2"
